# mgkw_platform_backend

./: .gitignore  .gitlab-ci.yml  Dockerfile  config-prod.yaml  config.yaml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  start_celery.py  test_wechat_pay.py
application/: __init__.py
application/apis/: __init__.py
application/apis/account/: __init__.py  admin_api.py  admin_service.py  api.py
application/apis/auth/: __init__.py  admin_api.py  role_admin_service.py  user_role_admin_service.py
application/apis/category/: __init__.py  category_admin_api.py  category_admin_service.py  category_api.py  category_service.py  series_admin_api.py  series_admin_service.py
application/apis/common/: __init__.py  api.py  dashboard_admin_service.py
application/apis/design/: __init__.py  designer_admin_service.py
application/apis/order/: __init__.py
application/apis/payment/: __init__.py
application/apis/user/: __init__.py  (+2 more)
application/common/: config.py
application/core/: database.py  lifespan.py  logger_util.py  redis_client.py
application/service/: account_service.py  category_service.py  common_service.py  design_access_service.py  design_license_plan_service.py  design_service.py  order_item_service.py  order_service.py  product_design_service.py  product_service.py  product_snap_shot_service.py  recommend_service.py  role_service.py  series_service.py  sku_service.py  sys_conf_service.py  token_service.py  user_auth_service.py  user_design_license_service.py  user_role_service.py  user_service.py  user_vip_service.py  vip_plan_service.py
(+99 files in other folders)
